Fixed 'this message is only visible to you' to actually work

--- a/res/quik.css
+++ b/res/quik.css
@@ -63,7 +63,7 @@ body {
   padding-left: 9px;
   padding-right: 9px;
   border-radius:2px;
-  color: #cccccc;
+  color: #b3b3b3;
   display:inline;
 }
 
